<resources>
    <string name="app_name">Covid KanziData</string>
    <string name="moto">Maabara Kuu ya Afya ya Jamii</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="test_result">Test Result</string>
    <string name="start_again">Start Again</string>
    <string name="driver_name">Driver Name:</string>
    <string name="license_number">License Number:</string>
    <string name="date">Date:</string>
    <string name="camera_permission_error">Please grant permission to open camera</string>
    <string name="positive_result_text">Immediately refer to Regional Medical Officer for further clinical test.</string>
    <string name="no_result_found">No Result Found</string>
    <string name="error">Something went wrong</string>
    <string name="camera_access_error">Unable to open camera</string>
    <string name="positive">+ Positive</string>
    <string name="negative">- Negative</string>
    <string name="copyright">Maabara kuu Ya Afya Ya Jami | Copyright 2020 | Developed by KanziData Systems Inc.</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="Positive">positive</string>
    <string name="Negative">negative</string>
    <string name="backgroundColor">backgroundColor</string>
</resources>
